[package]
name = "tokenizers-scala"
version = "0.1.0"
authors = ["Sören Brunk <soeren@brunk.io>"]
edition = "2021"

[dependencies]
tokenizers = "0.13.3"
j4rs = "0.15"
j4rs_derive = "0.1"
serde = { version = "1.0", features = ["derive"] }

[lib]
crate_type = ["cdylib"]

[build-dependencies]
cbindgen = "0.24.0"